fixed error with header background so it now stretches to fill the whole screen - thoughtco.com

--- a/responsive-portfolio-project/css/style.css
+++ b/responsive-portfolio-project/css/style.css
@@ -25,6 +25,7 @@
 
 header{
 background-image: url('https://img.freepik.com/https://img.freepik.com/free-photo/abstract-luxury-gradient-blue-background-smooth-dark-blue-with-black-vignette-studio-banner_1258-63452.jpg?w=826&t=st=1670018011~exp=1670018611~hmac=d0bef177dc75744a564f86268043f955e0afa10474b593528e7afdc79baadc97free-photo/gradient-dark-blue-futuristic-digital-grid-background_53876-129728.jpg?w=826&t=https://img.freepik.com/free-photo/abstract-luxury-gradient-blue-background-smooth-dark-blue-with-black-vignette-studio-banner_1258-63452.jpg?w=826&t=st=1670018011~exp=1670018611~hmac=d0bef177dc75744a564f86268043f955e0afa10474b593528e7afdc79baadc97st=1670017920~exp=1670018520~hmac=67bfbe40898aec7551d8d3d03a31d8a455dc2fee2b54da9447c386c36084cf4d');
+background-size: cover;
 background-repeat: no-repeat;
 object-fit: cover;
 }
